<?xml version="1.0" encoding="utf-8"?>

    <ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="@color/black_900"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Разработчики"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/dev_jenya"

                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:padding="8dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground" >

                <ImageView
                    android:src="@drawable/user_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Евгений Король"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dev_artem"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:padding="8dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground" >
                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Артём Войтехович"
                    />
                <ImageView
                    android:src="@drawable/user_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/dev_denya"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:padding="8dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground" >
                <ImageView
                    android:src="@drawable/user_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Денис Давыдов"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/dev_andrey"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:padding="8dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground" >
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Андрей Шмельков"
                    />
                <ImageView
                    android:src="@drawable/user_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dev_alexey"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:padding="8dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground" >
                <ImageView
                    android:src="@drawable/user_placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Алексей Дербышев"
                    />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/money"
            android:layout_below="@+id/top_layout"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black_900"
                android:textSize="15dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/text_money"
                android:layout_marginTop="6dp"
                android:text="Поддержка проекта"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/beer_button"
                android:layout_centerInParent="true"
                android:textSize="10dp"
                android:layout_below="@+id/text_money"
                android:layout_marginTop="7dp"
                android:text="Пиво Артему"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:textSize="10dp"
                android:text="Пиво Жене"
                android:layout_marginTop="7dp"
                android:layout_below="@+id/text_money"
                android:layout_toLeftOf="@+id/beer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:textSize="10dp"
                android:text="Пиво Денису"
                android:layout_marginTop="7dp"
                android:layout_below="@+id/text_money"
                android:layout_toRightOf="@+id/beer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <!--<RelativeLayout
            android:layout_marginTop="7dp"
            android:layout_below="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="7dp"
                android:layout_toRightOf="@+id/text_santa"
                android:id="@+id/image_happy"
                android:src="@drawable/user_placeholder"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <TextView
                android:textColor="@color/black_900"
                android:id="@+id/text_santa"
                android:textSize="22dp"
                android:text="При поддержке HappySanta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>-->


        <LinearLayout
            android:id="@+id/little_buttons_layout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:textColor="@color/about_bottom_text"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/about_bottom_text"
                    android:text="@string/about_terms"

                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_bottom_height"
                    android:id="@+id/terms"/>

                <Button
                    android:id="@+id/report"
                    android:textSize="@dimen/about_bottom_text"
                    android:text="@string/about_report"
                    android:background="@android:color/transparent"
                    android:textColor="@color/about_bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_bottom_height" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button

                    android:id="@+id/help"
                    android:background="@android:color/transparent"
                    android:text="@string/about_help"
                    android:textColor="@color/about_bottom_text"
                    android:textSize="@dimen/about_bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_bottom_height" />

                <Button
                    android:id="@+id/license"
                    android:textColor="@color/about_bottom_text"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/about_bottom_text"
                    android:text="@string/about_license"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_bottom_height" />

                <Button
                    android:id="@+id/privacy"
                    android:textColor="@color/about_bottom_text"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/about_bottom_text"
                    android:text="@string/about_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_bottom_height" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    </ScrollView>
